<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">
    <action
        android:id="@+id/action_global_navigation_home"
        app:destination="@id/navigation_home"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mini_pekkas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_event"
            app:destination="@id/navigation_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.mini_pekkas.ui.event.user.EventFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event" >
        <action
            android:id="@+id/action_navigation_event_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_event_to_navigation_event3"
            app:destination="@id/navigation_event3" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event3"
        android:name="com.example.mini_pekkas.ui.event.user.EventAcceptFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event_chosen" >
        <action
            android:id="@+id/action_navigation_event3_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_event2"
        android:name="com.example.mini_pekkas.ui.event.user.EventJoinFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event_join">
        <action
            android:id="@+id/action_navigation_event2_to_navigation_event"
            app:destination="@id/navigation_event" />
        <action
            android:id="@+id/action_navigation_event2_to_navigation_event3"
            app:destination="@id/navigation_event3" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mini_pekkas.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mini_pekkas.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.mini_pekkas.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_event"
            app:destination="@id/navigation_event2" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user_organizer"
        android:name="com.example.mini_pekkas.ui.event.user.UserOrganizerFragment"
        android:label="UserOrganizerFragment"
        tools:layout="@layout/fragment_user_organizer"/>
</navigation>

